fixed margins of nav-items on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -366,7 +366,7 @@ footer h2 {
   }
 
   .nav-item {
-    margin-left: 5.6em;
+    margin-left: 2em;
   }
 
   .nav-link {
